crates/check_cli/tests/snapshots/main_commands_rage/with_formatter_configuration.snap
---
source: crates/check_cli/tests/commands/rage.rs
expression: content
---
## `check.json`

```json
{
  "formatter": {
    "attributePosition": "multiline",
    "enabled": true,
    "formatWithErrors": true,
    "includes": [
      "**/*.html",
      "**/*.css",
      "**/*.js",
      "**/*.ts",
      "**/*.tsx",
      "**/*.jsx",
      "**/*.json",
      "**/*.md",
      "!configuration-schema.json"
    ],
    "indentStyle": "space",
    "indentWidth": 2,
    "lineEnding": "lf",
    "lineWidth": 120
  },
  "javascript": {
    "formatter": {
      "enabled": true,
      "arrowParentheses": "always",
      "jsxQuoteStyle": "single",
      "indentWidth": 2,
      "indentStyle": "tab",
      "lineEnding": "lf",
      "lineWidth": 100
    }
  },
  "json": {
    "formatter": {
      "enabled": true,
      "indentStyle": "space",
      "indentWidth": 2,
      "lineEnding": "lf",
      "lineWidth": 100
    }
  }
}
```

# Emitted Messages

```block
CLI:
  Version:                      0.0.0
  Color support:                **PLACEHOLDER**

Platform:
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Environment:
  CHECK_LOG_PATH:               **PLACEHOLDER**
  CHECK_LOG_PREFIX_NAME:        unset
  CHECK_CONFIG_PATH:            unset
  CHECK_THREADS:                unset
  NO_COLOR:                     **PLACEHOLDER**
  TERM:                         **PLACEHOLDER**
  JS_RUNTIME_VERSION:           unset
  JS_RUNTIME_NAME:              unset
  NODE_PACKAGE_MANAGER:         unset

Check Configuration:
  Status:                       Loaded successfully
  Path:                         check.json
  Formatter enabled:            true
  Linter enabled:               true
  Assist enabled:               true
  VCS enabled:                  false

Formatter:
  Format with errors:           true
  Indent style:                 Space
  Indent width:                 2
  Line ending:                  LF
  Line width:                   120
  Attribute position:           Multiline
  Bracket spacing:              unset
  Includes:                     **/*.html, **/*.css, **/*.js, **/*.ts, **/*.tsx, **/*.jsx, **/*.json, **/*.md, !configuration-schema.json

JavaScript Formatter:
  Enabled:                      true
  JSX quote style:              Single Quotes
  Quote properties:             unset
  Trailing commas:              unset
  Semicolons:                   unset
  Arrow parentheses:            Always
  Bracket spacing:              unset
  Bracket same line:            unset
  Quote style:                  unset
  Indent style:                 Tab
  Indent width:                 2
  Line ending:                  LF
  Line width:                   100
  Attribute position:           unset

JSON Formatter:
  Enabled:                      true
  Indent style:                 Space
  Indent width:                 2
  Line ending:                  LF
  Line width:                   100
  Trailing Commas:              unset
  Expand lists:                 unset

CSS Formatter:
  Enabled:                      unset
  Indent style:                 unset
  Indent width:                 unset
  Line ending:                  unset
  Line width:                   unset
  Quote style:                  unset

GraphQL Formatter:
  Enabled:                      unset
  Indent style:                 unset
  Indent width:                 unset
  Line ending:                  unset
  Line width:                   unset
  Bracket spacing:              unset
  Quote style:                  unset

Server:
  Version:                      0.0.0
  Name:                         check_lsp
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Workspace:
  Open Documents:               0
```
