crates/check_cli/tests/snapshots/main_commands_rage/with_malformed_configuration.snap
---
source: crates/check_cli/tests/commands/rage.rs
expression: content
---
## `check.json`

```json
{
  "formatter": {
    "enabled":
  }
}
```

# Emitted Messages

```block
CLI:
  Version:                      0.0.0
  Color support:                **PLACEHOLDER**

Platform:
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Environment:
  CHECK_LOG_PATH:               **PLACEHOLDER**
  CHECK_LOG_PREFIX_NAME:        unset
  CHECK_CONFIG_PATH:            unset
  CHECK_THREADS:                unset
  NO_COLOR:                     **PLACEHOLDER**
  TERM:                         **PLACEHOLDER**
  JS_RUNTIME_VERSION:           unset
  JS_RUNTIME_NAME:              unset
  NODE_PACKAGE_MANAGER:         unset

Check Configuration:
  Error:                        Expected an array, an object, or a literal but instead found '}'.
  Status:                       Loaded with errors
  Path:                         check.json
  Formatter enabled:            true
  Linter enabled:               true
  Assist enabled:               true
  VCS enabled:                  false

Server:
  Version:                      0.0.0
  Name:                         check_lsp
  CPU Architecture:             **PLACEHOLDER**
  OS:                           **PLACEHOLDER**

Workspace:
  Open Documents:               0
```
